fix: improved contrast for needs work table contribution table buttons (ZNTA-1650)

--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -3184,7 +3184,7 @@ select[multiple].input-group-sm > .form-control, select[multiple].input-group-sm
 }
 
 #activity-table td button.btn-warning {
-  background-color: rgba(233, 221, 0, 0.75);
+  background-color: rgba(233, 221, 0, 0.65);
 }
 
 #activity-table td button.btn-info {
